--- a/ValueRealization/Src/Home.fx.yaml
+++ b/ValueRealization/Src/Home.fx.yaml
@@ -143,3 +143,18 @@ Home As screen:
             Y: =334
             ZIndex: =12
 
+    Label10 As label:
+        BorderColor: =RGBA(0, 0, 0, 0)
+        BorderStyle: =BorderStyle.None
+        BorderThickness: =2
+        Color: =RGBA(51, 51, 51, 1)
+        DisabledBorderColor: =RGBA(0, 0, 0, 0)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        FocusedBorderThickness: =4
+        Font: =Font.'Segoe UI'
+        Size: =13
+        Text: ="Hello Ala"
+        X: =848
+        Y: =317
+        ZIndex: =14
+
