--- a/ValueRealization/Src/Home.fx.yaml
+++ b/ValueRealization/Src/Home.fx.yaml
@@ -153,7 +153,7 @@ Home As screen:
         FocusedBorderThickness: =4
         Font: =Font.'Segoe UI'
         Size: =13
-        Text: ="Hello Ala"
+        Text: ="Hello Ala cava ?"
         X: =848
         Y: =317
         ZIndex: =14
