--- a/ValueRealization/Src/NewCustomer.fx.yaml
+++ b/ValueRealization/Src/NewCustomer.fx.yaml
@@ -134,7 +134,7 @@
         HoverBorderColor: =RGBA(0, 0, 0, 0)
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(105, 121, 126, 1), -10%)
-        OnSelect: |-
+        OnSelect: |+
             =Patch(Customer, Defaults(Customer), {CustomerName:TextInput1.Text,IndustryID: selectedIndustryID});
             Set(customerid, LookUp(Customer, CustomerName = TextInput1.Text, CustomerID));
             Patch(Customer_bundle, Defaults(Customer_bundle), {SolutionBundleID:selectedBundleID,CustomerID:customerid});
@@ -150,7 +150,7 @@
             Set(industryid, LookUp(Customer, CustomerID = customerid, IndustryID));
             Set(defaulttable, LookUp(DefaultTable, IndustryID = industryid, IndustrID));
             NewForm(Form2);
-            Patch(Version, Defaults(Version), {CustomerID:customerid,VersionNumber:1});
+            
         PressedBorderColor: =ColorFade(RGBA(105, 121, 126, 1), -50%)
         PressedColor: =RGBA(255, 255, 255, 1)
         PressedFill: =ColorFade(RGBA(105, 121, 126, 1), -30%)
