--- a/ValueRealization/Src/BenefitCategorie.fx.yaml
+++ b/ValueRealization/Src/BenefitCategorie.fx.yaml
@@ -16,13 +16,14 @@
         HoverBorderColor: =RGBA(0, 0, 0, 0)
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(105, 121, 126, 1), -10%)
-        OnSelect: |
+        OnSelect: |+
             =Set(BY,Value(Dropdown1.SelectedText.Value));
             Set(AR, Value(TextInput3.Text));
             SubmitForm(Form2);
             Set(LastInsertedID, Max(LostProfit, LostProfitID));
             Patch(Input, Defaults(Input), {LostProfitID:LastInsertedID, BaselineYear:BY, AnnualRevenue:AR});
             Set(inputid, Max(Input, InputID));
+            Patch(Version, Defaults(Version), {CustomerID:customerid, InputID:inputid, VersionNumber:1});
              If(
                  !IsEmpty(Errors(Input)),
                  Notify(
@@ -31,7 +32,7 @@
                  ),
                 Notify("Changes submitted successfully !", NotificationType.Success);
              );
-            Patch(Version, Defaults(Version), {CustomerID:customerid, InputID:InputID, VersionNumber:1});
+            
         PressedBorderColor: =ColorFade(RGBA(105, 121, 126, 1), -50%)
         PressedColor: =RGBA(255, 255, 255, 1)
         PressedFill: =ColorFade(RGBA(105, 121, 126, 1), -30%)
@@ -150,7 +151,7 @@
                 ChevronHoverBackground: =RGBA(212, 212, 212, 1)
                 ChevronHoverFill: =RGBA(33, 33, 33, 1)
                 Color: =RGBA(51, 51, 51, 1)
-                Default: ="2024"
+                Default: =If (industryid = 0, LookUp(Input, InputID = existingvalues,BaselineYear), "2024")
                 DisabledBorderColor: =RGBA(0, 0, 0, 0)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
@@ -304,7 +305,7 @@
                 BorderColor: =RGBA(166, 166, 166, 1)
                 BorderThickness: =2
                 Color: =RGBA(51, 51, 51, 1)
-                Default: =If (industryid = 0,LookUp(DefaultTable, IndustryID = industryid,SuggestedValue) ,LookUp(DefaultTable, IndustryID = industryid,SuggestedValue))
+                Default: =If (industryid = 0, LookUp(Input, InputID = existingvalues,AnnualRevenue), LookUp(DefaultTable, IndustryID = industryid,SuggestedValue))
                 DisabledBorderColor: =RGBA(0, 0, 0, 0)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
@@ -648,7 +649,7 @@
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 BorderThickness: =2
                 Color: =RGBA(51, 51, 51, 1)
-                Default: =LookUp(DefaultTable, IndustryID = industryid,AddressableRevenue)
+                Default: =If (industryid = 0, LookUp(LostProfit, LostProfitID = lostprofitid, AdressableRevenuePercentage_Estimate), LookUp(DefaultTable, IndustryID = industryid,AddressableRevenue))
                 DelayOutput: =true
                 DisabledBorderColor: =RGBA(0, 0, 0, 0)
                 DisabledColor: =RGBA(166, 166, 166, 1)
@@ -877,7 +878,9 @@
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 BorderThickness: =2
                 Color: =RGBA(51, 51, 51, 1)
-                Default: =LookUp(DefaultTable, IndustryID = industryid,LostSales)
+                Default: |-
+                    =
+                    If (industryid = 0, LookUp(LostProfit, LostProfitID = lostprofitid, EstimatedLostSalesPercentage), LookUp(DefaultTable, IndustryID = industryid,LostSales))
                 DelayOutput: =true
                 DisabledBorderColor: =RGBA(0, 0, 0, 0)
                 DisabledColor: =RGBA(166, 166, 166, 1)
@@ -1106,7 +1109,9 @@
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 BorderThickness: =2
                 Color: =RGBA(51, 51, 51, 1)
-                Default: =LookUp(DefaultTable, IndustryID = industryid,GrossMargin)
+                Default: |-
+                    =
+                    If (industryid = 0, LookUp(LostProfit, LostProfitID = lostprofitid, HistoricalGrossMarginPercentage), LookUp(DefaultTable, IndustryID = industryid,GrossMargin))
                 DelayOutput: =true
                 DisabledBorderColor: =RGBA(0, 0, 0, 0)
                 DisabledColor: =RGBA(166, 166, 166, 1)
@@ -1335,7 +1340,9 @@
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 BorderThickness: =2
                 Color: =RGBA(51, 51, 51, 1)
-                Default: =LookUp(DefaultTable, IndustryID = industryid,Achievable)
+                Default: |-
+                    =
+                    If (industryid = 0, LookUp(LostProfit, LostProfitID = lostprofitid, AchievableEstimatedReductionLostRevenuePercentage), LookUp(DefaultTable, IndustryID = industryid,Achievable))
                 DelayOutput: =true
                 DisabledBorderColor: =RGBA(0, 0, 0, 0)
                 DisabledColor: =RGBA(166, 166, 166, 1)
@@ -1564,7 +1571,7 @@
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 BorderThickness: =2
                 Color: =RGBA(51, 51, 51, 1)
-                Default: =LookUp(DefaultTable, IndustryID = industryid,Conservative)
+                Default: =If (industryid = 0, LookUp(LostProfit, LostProfitID = lostprofitid, ConservativeEstimatedReductionLostRevenuePercentage), LookUp(DefaultTable, IndustryID = industryid,Conservative))
                 DelayOutput: =true
                 DisabledBorderColor: =RGBA(0, 0, 0, 0)
                 DisabledColor: =RGBA(166, 166, 166, 1)
