--- a/ValueRealization/Src/BenefitCategorie.fx.yaml
+++ b/ValueRealization/Src/BenefitCategorie.fx.yaml
@@ -59,7 +59,6 @@
                 )
             );
             Set(LastInsertedID, Max(LostProfit, LostProfitID));
-            Patch(Input, Defaults(Input), {LostProfitID:LastInsertedID, BaselineYear:BY, AnnualRevenue:AR});
             Set(inputid, Max(Input, InputID));
             Patch(Version, Defaults(Version), {CustomerID:customerid, InputID:inputid, VersionNumber:1});
              If(
@@ -148,8 +147,8 @@
         Height: =909
         NumberOfColumns: =2
         SnapToColumns: =false
-        Width: =1591
-        X: =55
+        Width: =1245
+        X: =394
         Y: =285
         ZIndex: =11
 
@@ -1696,4 +1695,65 @@
         X: =60
         Y: =104
         ZIndex: =12
+
+    Gallery5 As gallery.galleryHorizontal:
+        BorderColor: =RGBA(166, 166, 166, 1)
+        DelayItemLoading: =true
+        Height: =155
+        Items: =Filter(Version,'CustomerID'=customerid)
+        LoadingSpinner: =LoadingSpinner.Data
+        TemplateSize: =If(Self.Layout = Layout.Horizontal, Min(320, Self.Width - 60), Min(320, Self.Height - 60))
+        X: =40
+        Y: =40
+        ZIndex: =13
+
+        Button7 As button:
+            BorderColor: =RGBA(0, 0, 0, 0)
+            DisabledBorderColor: =RGBA(0, 0, 0, 0)
+            DisabledColor: =RGBA(166, 166, 166, 1)
+            DisabledFill: =RGBA(244, 244, 244, 1)
+            Fill: =RGBA(105, 121, 126, 1)
+            FocusedBorderColor: =ColorFade(Self.Fill, -75%)
+            Font: =Font.'Segoe UI'
+            FontWeight: =FontWeight.Semibold
+            HoverBorderColor: =RGBA(0, 0, 0, 0)
+            HoverColor: =RGBA(255, 255, 255, 1)
+            HoverFill: =ColorFade(RGBA(105, 121, 126, 1), -10%)
+            OnSelect: =Select(Parent)
+            PressedBorderColor: =ColorFade(RGBA(105, 121, 126, 1), -50%)
+            PressedColor: =RGBA(255, 255, 255, 1)
+            PressedFill: =ColorFade(RGBA(105, 121, 126, 1), -30%)
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Size: =15
+            Text: =ThisItem.VersionNumber
+            X: =40
+            Y: =40
+            ZIndex: =1
+
+    Icon1 As icon.Add:
+        BorderColor: =RGBA(166, 166, 166, 1)
+        Color: =RGBA(105, 121, 126, 1)
+        DisabledBorderColor: =RGBA(0, 0, 0, 0)
+        DisabledColor: =RGBA(220, 220, 220, 1)
+        DisabledFill: =RGBA(0, 0, 0, 0)
+        FocusedBorderThickness: =4
+        HoverBorderColor: =RGBA(0, 0, 0, 0)
+        HoverColor: =ColorFade(RGBA(105, 121, 126, 1), -30%)
+        HoverFill: =RGBA(0, 0, 0, 0)
+        Icon: =Icon.Add
+        OnSelect: |+
+            =
+            
+            Set(last_current_customer_version, Max(Filter(Version,CustomerID=CustomerID), VersionNumber));
+            Patch(Version, Defaults(Version), {CustomerID:customerid, VersionNumber:last_current_customer_version+1});
+            
+        PressedBorderColor: =RGBA(0, 0, 0, 0)
+        PressedColor: =ColorFade(RGBA(105, 121, 126, 1), -30%)
+        PressedFill: =RGBA(0, 0, 0, 0)
+        X: =1411
+        Y: =85
+        ZIndex: =14
 
