--- a/ValueRealization/Src/NewCustomer.fx.yaml
+++ b/ValueRealization/Src/NewCustomer.fx.yaml
@@ -139,7 +139,8 @@
             Set(customerid, LookUp(Customer, CustomerName = TextInput1.Text, CustomerID));
             Patch(Customer_bundle, Defaults(Customer_bundle), {SolutionBundleID:selectedBundleID,CustomerID:customerid});
             Patch(Version, Defaults(Version), {CustomerID:customerid,VersionNumber:1,InputID:0});
-            Set(LastInsertedID, Max(LostProfit, LostProfitID));
+            Set(LastInsertedVersionID, Max(Version, VersionID));
+            Set(current_version,LastInsertedVersionID);
             
             
              If(
