--- a/ValueRealization/Src/BenefitCategorie.fx.yaml
+++ b/ValueRealization/Src/BenefitCategorie.fx.yaml
@@ -1,7 +1,7 @@
 "BenefitCategorie As screen.'printableLayout_A4Landscape_ver1.0'":
     Height: =1400
     LoadingSpinnerColor: =RGBA(105, 121, 126, 1)
-    OnVisible: =Set(current_version_color,105)
+    OnVisible: =
     Width: =1700
 
     save_2 As button:
@@ -1717,16 +1717,14 @@
             DisabledBorderColor: =RGBA(0, 0, 0, 0)
             DisabledColor: =RGBA(166, 166, 166, 1)
             DisabledFill: =RGBA(244, 244, 244, 1)
-            Fill: =RGBA(current_version_color, 121, 126, 0)
+            Fill: =If(ThisItem.IsSelected, RGBA(105, 140, 126, 22),RGBA(105, 20, 126, 22))
             FocusedBorderColor: =ColorFade(Self.Fill, -75%)
             Font: =Font.'Segoe UI'
             FontWeight: =FontWeight.Semibold
             HoverBorderColor: =RGBA(0, 0, 0, 0)
             HoverColor: =RGBA(255, 255, 255, 1)
             HoverFill: =ColorFade(RGBA(105, 121, 126, 1), -10%)
-            OnSelect: |-
-                =Set(current_version,ThisItem.VersionID);
-                Set(current_version_color,0)
+            OnSelect: =Set(current_version,ThisItem.VersionID);
             PressedBorderColor: =ColorFade(RGBA(105, 121, 126, 1), -50%)
             PressedColor: =RGBA(255, 255, 255, 1)
             PressedFill: =ColorFade(RGBA(105, 121, 126, 1), -30%)
@@ -1755,7 +1753,8 @@
             =
             
             Set(last_current_customer_version, Max(Filter(Version,CustomerID=CustomerID), VersionNumber));
-            Patch(Version, Defaults(Version), {CustomerID:customerid, VersionNumber:last_current_customer_version+1});
+            Set(inputid, Max(Filter(Input,VersionID=current_version), InputID));
+            Patch(Version, Defaults(Version), {CustomerID:customerid, VersionNumber:last_current_customer_version+1, InputID:inputid});
             
         PressedBorderColor: =RGBA(0, 0, 0, 0)
         PressedColor: =ColorFade(RGBA(105, 121, 126, 1), -30%)
