--- a/ValueRealization/Src/BenefitCategorie.fx.yaml
+++ b/ValueRealization/Src/BenefitCategorie.fx.yaml
@@ -1760,10 +1760,11 @@
             
             Set(last_current_customer_version, Max(Filter(Version,CustomerID=customerid), VersionNumber));
             Set(inputid, Max(Filter(Input,VersionID=current_version), InputID));
-            Patch(Version, Defaults(Version), {CustomerID:customerid, VersionNumber:last_current_customer_version+1, InputID:inputid});
+            
             Set(c_version, Max(Filter(Version,CustomerID=customerid), VersionID));
-            Set(current_industry,LookUp(Customer, CustomerID = customerid,IndustryID);
-            Patch(Input, Defaults(Input), {VersionID:c_version,AnnualRevenue:LookUp(DefaultTable, IndustryID = current_industry,SuggestedValue)})
+            Patch(Input, Defaults(Input), {VersionID:c_version,AnnualRevenue:LookUp(DefaultTable, IndustryID =  6,SuggestedValue)});
+            Set(current_input,Max(Input,InputID));
+            Patch(Version, Defaults(Version), {CustomerID:customerid, VersionNumber:last_current_customer_version+1, InputID:current_input});
         PressedBorderColor: =RGBA(0, 0, 0, 0)
         PressedColor: =ColorFade(RGBA(105, 121, 126, 1), -30%)
         PressedFill: =RGBA(0, 0, 0, 0)
