--- a/ValueRealization/CanvasManifest.json
+++ b/ValueRealization/CanvasManifest.json
@@ -101,7 +101,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 24,
+    "BindingErrorCount": 0,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -138,7 +138,6 @@
     "Home",
     "NewCustomer",
     "BenefitCategorie",
-    "Login",
-    "Screen1"
+    "Login"
   ]
 }
